align-items stretch bug possible fix

--- a/src/App.css
+++ b/src/App.css
@@ -1037,6 +1037,7 @@ footer {
 }
 
 .image-grid {
+  align-items: flex-start;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
